--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "author": "RBMH",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "start": "npm run dev",
+    "dev": "webpack-dev-server --inline --progress --config build/webpack.prod.conf.js",
     "build": "node build/build.js"
   },
   "dependencies": {
