--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "NODE_ENV=production node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "include-media": "^1.4.9",
+    "flickity": "^2.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -47,6 +49,8 @@
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
+    "vuex": "^3.0.1",
+    "vuex-persistedstate": "^2.5.4",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
